Compiler/tests/typing2/good/testfile-ownership-1.rs
fn main() {
    let v = 42;
    let v2 = v;
    let x = v; // pas de problème, car i32 est un type copy
}
